--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-/*body {
-    background: white    ;
+.body {
+    
+    background-image: linear-gradient(45deg, white, lightblue);
     margin: 15px 15px 15px 15px;
     font-family: sans-serif;
     max-width: 1300px;
@@ -10,13 +11,11 @@
     border: 1px solid;
     font-family: monospace;
     text-transform: uppercase;
-    margin-top: 100px;
+    margin-top: 50px;
 }   
 .foto_perfil {
-    position: absolute;
-    top: 5px ;
-    left: 580px ;
-    margin: 15px 15px;
+    position:inherit;
+    margin: -90px 90px 15px 15px;
     border: 1px solid black;
     border-radius: 50%;
 }
@@ -27,7 +26,15 @@
 }
 .button {
     margin: 10px;
-    
+    height: 50px;
+    padding: 10px 10px 10px 10px;
+    color:dodgerblue;
+    font-size:18px;
+    text-align:center;
+    border-radius:30px;
+    border:3px solid dodgerblue;
+    box-shadow: inset 50 2px 3px 0 , inset 0 -3px 6px 0 rgba(0,0,0,.2), 0 3px 2px 0 rgba(0,0,0,.2);
+    background-image: linear-gradient(0deg, dodgerblue, white 100%);
     
 }
 .subpost { 
@@ -45,7 +52,7 @@
 }
 .lista_contato li a {
     color: blue ;
-}*/
+}
 .infofinanceira {
     width: 100px ;
     height: auto ;
@@ -54,6 +61,79 @@
     width: 100px ;
     height: auto ;  
 }
-/*.rodape {
+.rodape {
     font-size: 11px  
-}*/
+}
+.menu {
+    position:inherit ;
+    top: 10px ;
+    left: 40px ;
+    margin: 40px 120px 11px;
+        
+}
+form {
+    /* Apenas para centralizar o form na página */
+    margin: 0 auto;
+    width: 400px;
+    /* Para ver as bordas do formulário */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+}
+form div + div {
+    margin-top: 1em;
+}
+label {
+    /*Para ter certeza que todas as labels tem o mesmo tamanho e estão propriamente alinhadas */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}
+input, textarea {
+    /* Para certificar-se que todos os campos de texto têm as mesmas configurações de fonte. Por padrão, textareas ter uma fonte monospace*/
+    font: 1em sans-serif;
+
+    /* Para dar o mesmo tamanho a todos os campo de texto */
+    width: 300px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    /* Para harmonizar o look & feel das bordas nos campos de texto*/
+    border: 1px solid #999;
+}
+input:focus, textarea:focus {
+    /* Dar um pouco de destaque nos elementos ativos */
+    border-color: #000;
+}
+textarea {
+    /* Para alinhar corretamente os campos de texto de várias linhas com sua label*/
+    vertical-align: top;
+
+    /* Para dar espaço suficiente para digitar algum texto */
+    height: 5em;
+
+    /* Para permitir aos usuários redimensionarem qualquer textarea verticalmente. Ele não funciona em todos os browsers */
+    resize: vertical;
+}
+.buttonSend {
+    /* Para posicionar os botões para a mesma posição dos campos de texto */
+    padding-left: 90px; /* mesmo tamanho que os elementos do tipo label */
+}
+.buttonSend {
+    /* Esta margem extra representa aproximadamente o mesmo espaço que o espaço entre as labels e os seus campos de texto*/
+    margin-left: .5em;
+}
+.tabela1{
+    margin: 0 auto 15px;
+    width: 260px;
+}
+
+.si {
+    background-image: linear-gradient(90deg, red, white, white, white);
+}
+.senai {
+    background-image: linear-gradient(90deg, green,white);
+}
+.web {
+    background-image: linear-gradient(90deg, red, white, white, white, white, white, white, white);
+}
