--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ textarea {
     background-image: linear-gradient(90deg, red, white, white, white);
 }
 .senai {
-    background-image: linear-gradient(100deg, green);
+    background-image: linear-gradient(100deg, green, green);
 }
 .web {
     background-image: linear-gradient(90deg, red, white, white, white, white, white, white, white);
